@@ -1,4 +1,7 @@
 Conf-AmonNG
+09/12/08
+- ajout du nom de l'établissement ("libelle_etab") dans 0_amon.xml
+
 8/12/08 (sam)
 - instance : correction bug (1011) dans la creation de l'utilisateur amon2 (erreur au niveau de la boucle)
 
